--- a/carta2.html
+++ b/carta2.html
@@ -20,7 +20,7 @@
 
   <div class="card">
     <h1>luisi</h1>
-    <p>esroy muy feliz que este aqui y le deseo lo ejor del mundo que le pasen muchas cosas bonitas y que se despeja de esa cueva en donde se encientra aveces que sea muy feliz y florecitas ^^</p>
+    <p>estoy muy feliz que este aqui y le deseo lo mejor del mundo que le pasen muchas cosas bonitas y que se despeje de esa cueva en donde se encuentra aveces que sea muy feliz y florecitas ^^</p>
   </div>
 </body>
 </html>
